trying more models

--- a/siamese_model.ipynb
+++ b/siamese_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "accepting-press",
+   "id": "ancient-distinction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competent-check",
+   "id": "burning-activation",
    "metadata": {},
    "source": [
     "## Load in metadata"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "laughing-gross",
+   "id": "global-settle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "color-cruise",
+   "id": "prerequisite-planet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "conscious-literacy",
+   "id": "controversial-newton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dietary-mistake",
+   "id": "compressed-bulgaria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "divided-humanity",
+   "id": "crude-performance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "expressed-retirement",
+   "id": "casual-earth",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "sudden-novelty",
+   "id": "united-coverage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "permanent-detector",
+   "id": "straight-chosen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "hydraulic-astronomy",
+   "id": "entertaining-taylor",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "exceptional-charleston",
+   "id": "thirty-receptor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "progressive-opinion",
+   "id": "adverse-syntax",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "allied-architect",
+   "id": "female-animal",
    "metadata": {},
    "source": [
     "## Create matched pairs dataframe"
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "elect-rapid",
+   "id": "ethical-chocolate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "above-integer",
+   "id": "faced-gossip",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "initial-arrest",
+   "id": "wound-depth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "cutting-error",
+   "id": "compatible-union",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "comic-convention",
+   "id": "disciplinary-appraisal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "short-saskatchewan",
+   "id": "superior-cambridge",
    "metadata": {},
    "source": [
     "## Data preprocessing"
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exterior-debut",
+   "id": "banned-thesaurus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "protected-special",
+   "id": "major-panic",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ignored-pittsburgh",
+   "id": "electric-covering",
    "metadata": {},
    "source": [
     "## Create dataloader"
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "pleased-prayer",
+   "id": "missing-transaction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "greek-interval",
+   "id": "veterinary-terrorism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "productive-albania",
+   "id": "announced-deployment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "sealed-mississippi",
+   "id": "acting-friendly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extra-amber",
+   "id": "golden-coalition",
    "metadata": {},
    "source": [
     "## Model"
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "round-exception",
+   "id": "graduate-convertible",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "adopted-intent",
+   "id": "departmental-maker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "sized-cooperation",
+   "id": "private-corps",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "comprehensive-discount",
+   "id": "packed-tomorrow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "environmental-tumor",
+   "id": "considerable-niagara",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handled-application",
+   "id": "behind-deployment",
    "metadata": {},
    "source": [
     "### LR = 0.005"
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "designing-difficulty",
+   "id": "familiar-farmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "renewable-disaster",
+   "id": "vertical-ecology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "convenient-presence",
+   "id": "matched-berlin",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "phantom-justice",
+   "id": "eligible-tradition",
    "metadata": {},
    "source": [
     "### LR = 0.1"
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "checked-pressing",
+   "id": "north-maximum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "legislative-concrete",
+   "id": "respiratory-retreat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,8 +1083,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "laden-boutique",
+   "execution_count": 138,
+   "id": "lonely-butler",
    "metadata": {},
    "outputs": [
     {
@@ -1107,6 +1107,216 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss:  6.174260411247135\n",
+      "Train accuracy:  0.6345128988458928\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4d19d2cc991a49fb8257445b365e959e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/371 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss:  1.134132933102528\n",
+      "Valid accuracy:  0.6333670260557053\n",
+      "Epoch:  1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a6143cf557f46e5849831fcb24215cc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1473 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss:  1.7190021152247075\n",
+      "Train accuracy:  0.6366768499660557\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c35daf560c934f01aa985052d85cf3f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/371 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss:  0.8360682600592024\n",
+      "Valid accuracy:  0.6330300988319856\n",
+      "Epoch:  2\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "855a8ec0c6154b3a850aec1531574437",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1473 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss:  1.3450786353412\n",
+      "Train accuracy:  0.636591989137814\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b2193dc3a5440dda61555a3975ae3d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/371 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss:  0.6581791618442279\n",
+      "Valid accuracy:  0.6329177897574124\n",
+      "Epoch:  3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "932fd6f8bb0d4840988192e634c99673",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1473 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss:  0.71133600738853\n",
+      "Train accuracy:  0.6371350984385608\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "798f801a4ab341d58da5c0e9d7e5da38",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/371 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss:  0.6573680991111097\n",
+      "Valid accuracy:  0.6329177897574124\n",
+      "Epoch:  4\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "87f8283976e54f2d9d9d4814d83df7f2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1473 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss:  0.7947154426688009\n",
+      "Train accuracy:  0.6363034623217922\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dcf53b299fdf43129ec376cedcc2490c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/371 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss:  0.6579936725110057\n",
+      "Valid accuracy:  0.6329177897574124\n"
+     ]
     }
    ],
    "source": [
@@ -1131,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alien-baseline",
+   "id": "radio-welcome",
    "metadata": {},
    "outputs": [],
    "source": []
