run validation and test models

--- a/siamese_model.ipynb
+++ b/siamese_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ancient-distinction",
+   "id": "amber-belgium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from tqdm.notebook import tqdm\n",
     "from torchsummary import summary\n",
+    "from sklearn.metrics import confusion_matrix, roc_auc_score\n",
     "\n",
     "# data augmentation\n",
     "import albumentations as A\n",
@@ -33,8 +34,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "amended-syntax",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validation_check_siamese(model, dataloader):\n",
+    "    model.eval()\n",
+    "    \n",
+    "    preds = []\n",
+    "    trues = []\n",
+    "    for x1, x2, y in tqdm(dataloader):\n",
+    "        y_pred = model(x1, x2)\n",
+    "        probs = torch.sigmoid(y_pred)\n",
+    "        preds.extend(probs.tolist())\n",
+    "        trues.extend(y.tolist())\n",
+    "        \n",
+    "    trues = np.array(trues)\n",
+    "    preds = np.array(preds)\n",
+    "    \n",
+    "    auc = roc_auc_score(trues, preds)\n",
+    "        \n",
+    "    print(confusion_matrix(trues, np.where(preds > 0.5, 1, 0)))\n",
+    "    print(auc)\n",
+    "    return preds, trues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "engaging-designation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_pass_siamese(model, dataloader, optimizer, lossFun, backwards=True, print_loss=False):\n",
+    "    \n",
+    "    if backwards == True:\n",
+    "        model.train()\n",
+    "    else:\n",
+    "        model.eval()\n",
+    "    \n",
+    "    total_loss = 0.0\n",
+    "    avg_accs = []\n",
+    "    for x1, x2, y in tqdm(dataloader):\n",
+    "        \n",
+    "        y_soft_pred = model(x1, x2)\n",
+    "        loss = lossFun(y_soft_pred, y)\n",
+    "        total_loss += loss.item()\n",
+    "        y_hard_pred = torch.where(y_soft_pred > 0, 1, 0)\n",
+    "        avg_accs.append(torch.sum(y_hard_pred == y).item()/len(y))\n",
+    "        \n",
+    "        if backwards == True:\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "    avg_loss = total_loss / len(dataloader)\n",
+    "    avg_acc = sum(avg_accs) / len(dataloader)\n",
+    "    \n",
+    "    if print_loss == True:\n",
+    "        print(avg_loss)\n",
+    "        print(avg_acc)\n",
+    "    \n",
+    "    return avg_loss, avg_acc"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "burning-activation",
+   "id": "upset-homework",
    "metadata": {},
    "source": [
     "## Load in metadata"
@@ -43,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "global-settle",
+   "id": "recovered-detector",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "prerequisite-planet",
+   "id": "moving-theorem",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "controversial-newton",
+   "id": "sound-import",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "compressed-bulgaria",
+   "id": "prompt-planner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "crude-performance",
+   "id": "extreme-accident",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "casual-earth",
+   "id": "competitive-pierce",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "united-coverage",
+   "id": "eastern-satisfaction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "straight-chosen",
+   "id": "fifty-charger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "entertaining-taylor",
+   "id": "protecting-secretariat",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "thirty-receptor",
+   "id": "alternative-bryan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "adverse-syntax",
+   "id": "modern-baltimore",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "female-animal",
+   "id": "third-assurance",
    "metadata": {},
    "source": [
     "## Create matched pairs dataframe"
@@ -457,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ethical-chocolate",
+   "id": "reserved-intelligence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "faced-gossip",
+   "id": "acoustic-debate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "wound-depth",
+   "id": "electronic-terrorist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "compatible-union",
+   "id": "unusual-bargain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "disciplinary-appraisal",
+   "id": "incident-darkness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,8 +595,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "after-bandwidth",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_pairs_df_small.to_csv('validation_pairs.csv', index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "specialized-peeing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pairs_df_small = test_pairs_df.sample(frac=0.09)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "independent-dancing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pairs_df_small.to_csv('test_pairs.csv', index=None)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "superior-cambridge",
+   "id": "helpful-advice",
    "metadata": {},
    "source": [
     "## Data preprocessing"
@@ -538,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "banned-thesaurus",
+   "id": "medium-hindu",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "major-panic",
+   "id": "thorough-darkness",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electric-covering",
+   "id": "sexual-breath",
    "metadata": {},
    "source": [
     "## Create dataloader"
@@ -603,11 +700,11 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "missing-transaction",
+   "id": "informative-complement",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ArtistDataset(Dataset):\n",
+    "class ArtistPairsDataset(Dataset):\n",
     "    def __init__(self, df):\n",
     "        self.df = df\n",
     "        \n",
@@ -630,39 +727,39 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "veterinary-terrorism",
+   "id": "frequent-concord",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ds = ArtistDataset(train_pairs_df_small)\n",
+    "train_ds = ArtistPairsDataset(train_pairs_df_small)\n",
     "train_dl = DataLoader(train_ds, batch_size=16, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "announced-deployment",
+   "id": "perfect-tutorial",
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_ds = ArtistDataset(val_pairs_df_small)\n",
+    "val_ds = ArtistPairsDataset(val_pairs_df_small)\n",
     "val_dl = DataLoader(val_ds, batch_size=16, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "id": "acting-friendly",
+   "execution_count": 186,
+   "id": "natural-bobby",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_ds = ArtistDataset(test_pairs_df)\n",
+    "test_ds = ArtistPairsDataset(test_pairs_df_small)\n",
     "test_dl = DataLoader(test_ds, batch_size=16, shuffle=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "golden-coalition",
+   "id": "warming-croatia",
    "metadata": {},
    "source": [
     "## Model"
@@ -671,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "graduate-convertible",
+   "id": "removable-acquisition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "departmental-maker",
+   "id": "narrative-science",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "private-corps",
+   "id": "fleet-force",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "packed-tomorrow",
+   "id": "european-dialogue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,46 +826,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "considerable-niagara",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def one_pass_classification(model, dataloader, optimizer, lossFun, backwards=True, print_loss=False):\n",
-    "    \n",
-    "    if backwards == True:\n",
-    "        model.train()\n",
-    "    else:\n",
-    "        model.eval()\n",
-    "    \n",
-    "    total_loss = 0.0\n",
-    "    avg_accs = []\n",
-    "    for x1, x2, y in tqdm(dataloader):\n",
-    "        \n",
-    "        y_soft_pred = model(x1, x2)\n",
-    "        loss = lossFun(y_soft_pred, y)\n",
-    "        total_loss += loss.item()\n",
-    "        y_hard_pred = torch.where(y_soft_pred > 0, 1, 0)\n",
-    "        avg_accs.append(torch.sum(y_hard_pred == y).item()/len(y))\n",
-    "        \n",
-    "        if backwards == True:\n",
-    "            optimizer.zero_grad()\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "    avg_loss = total_loss / len(dataloader)\n",
-    "    avg_acc = sum(avg_accs) / len(dataloader)\n",
-    "    \n",
-    "    if print_loss == True:\n",
-    "        print(avg_loss)\n",
-    "        print(avg_acc)\n",
-    "    \n",
-    "    return avg_loss, avg_acc"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "behind-deployment",
+   "id": "czech-lounge",
    "metadata": {},
    "source": [
     "### LR = 0.005"
@@ -777,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "familiar-farmer",
+   "id": "fluid-option",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "vertical-ecology",
+   "id": "unable-tuesday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "matched-berlin",
+   "id": "bound-rachel",
    "metadata": {},
    "outputs": [
     {
@@ -1053,8 +1112,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "diverse-folks",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model, 'models/siamese_lr005')"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "eligible-tradition",
+   "id": "formal-florist",
    "metadata": {},
    "source": [
     "### LR = 0.1"
@@ -1063,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "north-maximum",
+   "id": "coordinate-watts",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "respiratory-retreat",
+   "id": "based-polish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "lonely-butler",
+   "id": "variable-wound",
    "metadata": {},
    "outputs": [
     {
@@ -1340,11 +1409,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "radio-welcome",
+   "execution_count": 191,
+   "id": "formal-aquarium",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.save(model_2, 'models/siamese_lr1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "global-mediterranean",
+   "metadata": {},
+   "source": [
+    "## Compare between the two siamese models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "proper-custody",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "96dd1a39174d493f8cf4af88f74e52a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/371 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3750    0]\n",
+      " [2176    0]]\n",
+      "0.5493735294117648\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds, trues = validation_check(model, val_dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "controlling-adelaide",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "513754dac89c49f79e75b842819fb8ae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/371 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3750    0]\n",
+      " [2174    2]]\n",
+      "0.5004595588235294\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.3860285, 0.3860285, 0.3860285, ..., 0.3860285, 0.3860285,\n",
+       "        0.3860285]),\n",
+       " array([0., 0., 0., ..., 1., 0., 0.]))"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validation_check(model_2, val_dl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hydraulic-ceramic",
+   "metadata": {},
+   "source": [
+    "## Run test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "according-pocket",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6dfab676d1534bbcb850096427b612a4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/643 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10002     0]\n",
+      " [  282     0]]\n",
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds, trues = validation_check(model_2, test_dl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dominant-floating",
+   "metadata": {},
+   "source": [
+    "This model classified all test cases as not the same artist."
+   ]
   }
  ],
  "metadata": {
