--- a/siamese_model.ipynb
+++ b/siamese_model.ipynb
@@ -3,11 +3,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "amber-belgium",
+   "id": "yellow-economy",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import cv2\n",
     "import random\n",
     "import pandas as pd\n",
@@ -15,12 +14,9 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
+    "from sklearn.metrics import roc_auc_score, confusion_matrix\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from tqdm.notebook import tqdm\n",
-    "from torchsummary import summary\n",
-    "from sklearn.metrics import confusion_matrix, roc_auc_score\n",
     "\n",
     "# data augmentation\n",
     "import albumentations as A\n",
@@ -30,78 +26,13 @@
     "import torchvision\n",
     "from torchvision import models, transforms\n",
     "\n",
-    "from functions import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "id": "amended-syntax",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def validation_check_siamese(model, dataloader):\n",
-    "    model.eval()\n",
-    "    \n",
-    "    preds = []\n",
-    "    trues = []\n",
-    "    for x1, x2, y in tqdm(dataloader):\n",
-    "        y_pred = model(x1, x2)\n",
-    "        probs = torch.sigmoid(y_pred)\n",
-    "        preds.extend(probs.tolist())\n",
-    "        trues.extend(y.tolist())\n",
-    "        \n",
-    "    trues = np.array(trues)\n",
-    "    preds = np.array(preds)\n",
-    "    \n",
-    "    auc = roc_auc_score(trues, preds)\n",
-    "        \n",
-    "    print(confusion_matrix(trues, np.where(preds > 0.5, 1, 0)))\n",
-    "    print(auc)\n",
-    "    return preds, trues"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "engaging-designation",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def one_pass_siamese(model, dataloader, optimizer, lossFun, backwards=True, print_loss=False):\n",
-    "    \n",
-    "    if backwards == True:\n",
-    "        model.train()\n",
-    "    else:\n",
-    "        model.eval()\n",
-    "    \n",
-    "    total_loss = 0.0\n",
-    "    avg_accs = []\n",
-    "    for x1, x2, y in tqdm(dataloader):\n",
-    "        \n",
-    "        y_soft_pred = model(x1, x2)\n",
-    "        loss = lossFun(y_soft_pred, y)\n",
-    "        total_loss += loss.item()\n",
-    "        y_hard_pred = torch.where(y_soft_pred > 0, 1, 0)\n",
-    "        avg_accs.append(torch.sum(y_hard_pred == y).item()/len(y))\n",
-    "        \n",
-    "        if backwards == True:\n",
-    "            optimizer.zero_grad()\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "    avg_loss = total_loss / len(dataloader)\n",
-    "    avg_acc = sum(avg_accs) / len(dataloader)\n",
-    "    \n",
-    "    if print_loss == True:\n",
-    "        print(avg_loss)\n",
-    "        print(avg_acc)\n",
-    "    \n",
-    "    return avg_loss, avg_acc"
+    "from functions import *\n",
+    "from classes import *"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "upset-homework",
+   "id": "trained-anniversary",
    "metadata": {},
    "source": [
     "## Load in metadata"
@@ -110,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "recovered-detector",
+   "id": "gentle-attack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "moving-theorem",
+   "id": "persistent-particle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sound-import",
+   "id": "paperback-implement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "prompt-planner",
+   "id": "social-trauma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "extreme-accident",
+   "id": "acoustic-blink",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "competitive-pierce",
+   "id": "disabled-antibody",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "eastern-satisfaction",
+   "id": "comprehensive-scholar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fifty-charger",
+   "id": "turkish-filling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "protecting-secretariat",
+   "id": "saving-andrew",
    "metadata": {},
    "outputs": [
     {
@@ -494,10 +425,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "alternative-bryan",
+   "id": "administrative-fundamentals",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# split train and test dataframes\n",
     "train_df = df[df['in_train'] == True]\n",
     "train_df = train_df.reset_index(drop=True)"
    ]
@@ -505,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "modern-baltimore",
+   "id": "informational-brand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "third-assurance",
+   "id": "sufficient-plastic",
    "metadata": {},
    "source": [
     "## Create matched pairs dataframe"
@@ -524,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "reserved-intelligence",
+   "id": "medium-murder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "acoustic-debate",
+   "id": "liable-office",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "electronic-terrorist",
+   "id": "champion-barrel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,10 +505,11 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "unusual-bargain",
+   "id": "smoking-residence",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# balance the dataset\n",
     "train_true_pairs = train_pairs_df[train_pairs_df['same_artist'] == True]\n",
     "train_false_pairs = train_pairs_df[train_pairs_df['same_artist'] != True].sample(frac=0.05)\n",
     "train_pairs_df_small = pd.concat([train_true_pairs, train_false_pairs], ignore_index=True)"
@@ -585,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "incident-darkness",
+   "id": "headed-moses",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "after-bandwidth",
+   "id": "assumed-referral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,17 +540,18 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "specialized-peeing",
+   "id": "charged-species",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# make the size of the test set more manageable\n",
     "test_pairs_df_small = test_pairs_df.sample(frac=0.09)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "independent-dancing",
+   "id": "black-analysis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "helpful-advice",
+   "id": "independent-collins",
    "metadata": {},
    "source": [
     "## Data preprocessing"
@@ -635,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "medium-hindu",
+   "id": "promising-trademark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "thorough-darkness",
+   "id": "proper-anchor",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sexual-breath",
+   "id": "alternate-wednesday",
    "metadata": {},
    "source": [
     "## Create dataloader"
@@ -699,35 +633,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "informative-complement",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ArtistPairsDataset(Dataset):\n",
-    "    def __init__(self, df):\n",
-    "        self.df = df\n",
-    "        \n",
-    "        self.remap = {False: 0, True: 1}\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        return len(self.df)\n",
-    "    \n",
-    "    def __getitem__(self, idx):\n",
-    "        row = self.df.iloc[idx]\n",
-    "        \n",
-    "        img_1 = load_image(row['filename_1'])\n",
-    "        img_2 = load_image(row['filename_2'])\n",
-    "        \n",
-    "        label = torch.tensor(self.remap[row['same_artist']]).float()\n",
-    "        \n",
-    "        return img_1, img_2, label"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 127,
-   "id": "frequent-concord",
+   "id": "following-siemens",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "perfect-tutorial",
+   "id": "found-secretariat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "natural-bobby",
+   "id": "welsh-sight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "warming-croatia",
+   "id": "convenient-allergy",
    "metadata": {},
    "source": [
     "## Model"
@@ -768,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "removable-acquisition",
+   "id": "constitutional-technician",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,17 +685,18 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "narrative-science",
+   "id": "reverse-captain",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# only use up to layer 3 of the classifier block\n",
     "features.classifier = nn.Sequential(*[features.classifier[i] for i in range(4)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "fleet-force",
+   "id": "incorporated-value",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,36 +706,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "european-dialogue",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class SiameseNetwork(nn.Module):\n",
-    "    def __init__(self, features):\n",
-    "        super(SiameseNetwork, self).__init__()\n",
-    "        # individual\n",
-    "        self.features = features\n",
-    "        # shared\n",
-    "        self.dropout = nn.Dropout(p=0.5)\n",
-    "        self.relu = nn.ReLU()\n",
-    "        self.linear1 = nn.Linear(8192, 1024)\n",
-    "        self.linear2 = nn.Linear(1024, 1)\n",
-    "        \n",
-    "    def forward(self, x1, x2):\n",
-    "        x1_features = self.features(x1)\n",
-    "        x2_features = self.features(x2)\n",
-    "        x = torch.cat([x1_features, x2_features], 1)\n",
-    "        x = self.linear1(x)\n",
-    "        x = self.relu(x)\n",
-    "        x = self.linear2(x)\n",
-    "        return x.squeeze()"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "czech-lounge",
+   "id": "cognitive-northwest",
    "metadata": {},
    "source": [
     "### LR = 0.005"
@@ -836,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "fluid-option",
+   "id": "destroyed-connection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "unable-tuesday",
+   "id": "complimentary-chess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "bound-rachel",
+   "id": "downtown-planner",
    "metadata": {},
    "outputs": [
     {
@@ -1100,12 +980,12 @@
     "for epoch in range(num_epochs):\n",
     "    print('Epoch: ', epoch)\n",
     "    \n",
-    "    train_loss, train_acc = one_pass_classification(model, train_dl, optimizer, lossFun)\n",
+    "    train_loss, train_acc = one_pass_siamese(model, train_dl, optimizer, lossFun)\n",
     "    train_losses.append(train_loss)\n",
     "    print('Train loss: ', train_loss)\n",
     "    print('Train accuracy: ', train_acc)\n",
     "    \n",
-    "    valid_loss, valid_acc = one_pass_classification(model, val_dl, optimizer, lossFun, backwards=False)\n",
+    "    valid_loss, valid_acc = one_pass_siamese(model, val_dl, optimizer, lossFun, backwards=False)\n",
     "    valid_losses.append(valid_loss)\n",
     "    print('Valid loss: ', valid_loss)\n",
     "    print('Valid accuracy: ', valid_acc)"
@@ -1114,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "diverse-folks",
+   "id": "educated-vegetarian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "formal-florist",
+   "id": "decimal-secret",
    "metadata": {},
    "source": [
     "### LR = 0.1"
@@ -1132,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "coordinate-watts",
+   "id": "complimentary-miami",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "based-polish",
+   "id": "trying-track",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "variable-wound",
+   "id": "flush-helen",
    "metadata": {},
    "outputs": [
     {
@@ -1396,12 +1276,12 @@
     "for epoch in range(num_epochs):\n",
     "    print('Epoch: ', epoch)\n",
     "    \n",
-    "    train_loss, train_acc = one_pass_classification(model_2, train_dl, optimizer, lossFun)\n",
+    "    train_loss, train_acc = one_pass_siamese(model_2, train_dl, optimizer, lossFun)\n",
     "    train_losses.append(train_loss)\n",
     "    print('Train loss: ', train_loss)\n",
     "    print('Train accuracy: ', train_acc)\n",
     "    \n",
-    "    valid_loss, valid_acc = one_pass_classification(model_2, val_dl, optimizer, lossFun, backwards=False)\n",
+    "    valid_loss, valid_acc = one_pass_siamese(model_2, val_dl, optimizer, lossFun, backwards=False)\n",
     "    valid_losses.append(valid_loss)\n",
     "    print('Valid loss: ', valid_loss)\n",
     "    print('Valid accuracy: ', valid_acc)"
@@ -1410,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "formal-aquarium",
+   "id": "present-national",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1419,7 +1299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "global-mediterranean",
+   "id": "arbitrary-spencer",
    "metadata": {},
    "source": [
     "## Compare between the two siamese models"
@@ -1428,7 +1308,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "proper-custody",
+   "id": "attempted-truck",
    "metadata": {},
    "outputs": [
     {
@@ -1456,13 +1336,13 @@
     }
    ],
    "source": [
-    "preds, trues = validation_check(model, val_dl)"
+    "validation_check_siamese(model, val_dl)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "controlling-adelaide",
+   "id": "identical-legislature",
    "metadata": {},
    "outputs": [
     {
@@ -1502,12 +1382,20 @@
     }
    ],
    "source": [
-    "validation_check(model_2, val_dl)"
+    "validation_check_siamese(model_2, val_dl)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "hydraulic-ceramic",
+   "id": "frozen-automation",
+   "metadata": {},
+   "source": [
+    "Based on the confusion matrix, model 2 seems better than model one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "female-filter",
    "metadata": {},
    "source": [
     "## Run test"
@@ -1516,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "according-pocket",
+   "id": "systematic-transition",
    "metadata": {},
    "outputs": [
     {
@@ -1544,15 +1432,15 @@
     }
    ],
    "source": [
-    "preds, trues = validation_check(model_2, test_dl)"
+    "validation_check_siamese(model_2, test_dl)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dominant-floating",
+   "id": "domestic-christian",
    "metadata": {},
    "source": [
-    "This model classified all test cases as not the same artist."
+    "This model classified all test cases as \"not the same artist\"."
    ]
   }
  ],
